feat: 集成生产级日志系统
## 核心改进

### 1. 集成 tracing 日志框架
- 添加 tracing, tracing-subscriber, tracing-appender 依赖
- 替换所有 println! 为结构化日志 (info!, warn!, error!, debug!)
- 统计: 30个 info!, 5个 warn!, 23个 error!, 24个 debug!

### 2. 实现双输出日志系统
- 文件日志: ~/Library/Logs/com.sai.iptv-player/iptv-player.log
  - 每日自动滚动
  - 包含完整信息 (时间戳、模块、线程ID、行号)
- 控制台日志: stdout
  - 带 ANSI 颜色高亮
  - 紧凑格式，适合实时查看

### 3. 函数级别追踪
为 14 个关键函数添加 #[instrument] 宏:
- 订阅源操作: get_sources, add_source, update_source, delete_source
- 网络请求: fetch_url_content, fetch_and_proxy_m3u8, fetch_and_parse_m3u
- 代理服务: proxy_handler, create_proxy_url, proxy_stream
- 系统服务: start_proxy_server, handle_stream_protocol

### 4. 支持环境变量配置
通过 RUST_LOG 环境变量控制日志级别:
- RUST_LOG=info (默认)
- RUST_LOG=debug (开发调试)
- RUST_LOG=trace (详细追踪)
- RUST_LOG=error (生产环境)

## 新增文件

- LOGGING.md - 完整使用指南 (4000+ 字)
- 日志系统更新说明.md - 技术更新细节
- README_LOGGING.md - 快速上手指南
- test-logging.sh - 自动化测试脚本

## 更新文件

- src-tauri/Cargo.toml - 添加日志依赖
- src-tauri/src/lib.rs - 实现日志系统和初始化
- README.md - 添加日志系统章节

## 使用方法

查看日志:
  tail -f ~/Library/Logs/com.sai.iptv-player/iptv-player.log

设置日志级别:
  export RUST_LOG=debug && npm run tauri dev

从终端启动应用:
  /Applications/IPTV\ Player.app/Contents/MacOS/IPTV\ Player

详细文档: LOGGING.md

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,4 +31,7 @@ urlencoding = "2.1"
 axum = "0.7"
 tower = "0.4"
 tower-http = { version = "0.5", features = ["cors"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
+tracing-appender = "0.2"
 
