docs: 更新日志系统文档，说明日期滚动策略
## 更新内容

### README.md
- 明确说明日志文件名会添加日期后缀（如 iptv-player.log.2025-10-25）
- 更新所有查看日志的命令，使用通配符 *.log.* 匹配日期文件
- 添加快捷别名配置说明（iptv-log, iptv-errors）
- 更新日志示例为实际运行的日志内容

### LOGGING.md
- 添加日期滚动策略的重要说明
- 更新所有命令使用通配符匹配日期文件
- 添加快捷别名配置方法
- 明确说明这是 tracing-appender 的正常行为

### .gitignore
- 添加 releases/ 目录（打包产物不应提交）
- 添加各平台二进制文件类型（.dmg, .exe, .msi, .deb 等）

## 问题说明

之前文档中日志路径写的是 iptv-player.log，但实际文件名是
iptv-player.log.YYYY-MM-DD，导致用户找不到日志文件。

现在已更新所有文档，使用通配符 *.log.* 来匹配，并明确说明
这是日志滚动的正常行为。

## 验证

已在 macOS 上验证日志系统正常工作：
- 日志正确写入带日期后缀的文件
- 包含完整的启动和运行日志
- 所有功能正常记录

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,15 @@ dist-ssr
 src-tauri/target
 src-tauri/gen
 
+# Release builds (binary files)
+releases/
+*.dmg
+*.exe
+*.msi
+*.deb
+*.rpm
+*.AppImage
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
