--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -7,21 +7,52 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-macos:
+  build:
     strategy:
       fail-fast: false
       matrix:
         include:
-          - target: aarch64-apple-darwin
+          # macOS
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            platform: macOS
             arch: Apple-Silicon
-          - target: x86_64-apple-darwin
+          - os: macos-latest
+            target: x86_64-apple-darwin
+            platform: macOS
             arch: Intel
 
-    runs-on: macos-latest
+          # Windows
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+            platform: Windows
+            arch: x64
+
+          # Linux
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            platform: Linux
+            arch: x64
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Install Linux dependencies
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libwebkit2gtk-4.1-dev \
+            build-essential \
+            curl \
+            wget \
+            file \
+            libssl-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -39,23 +70,74 @@ jobs:
       - name: Build Tauri app
         run: npm run tauri build -- --target ${{ matrix.target }}
 
-      - name: Rename DMG
+      - name: Rename files (macOS)
+        if: matrix.os == 'macos-latest'
+        shell: bash
         run: |
           cd src-tauri/target/${{ matrix.target }}/release/bundle/dmg
           for file in *.dmg; do
-            mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-macOS-${{ matrix.arch }}.dmg"
+            [ -e "$file" ] || continue
+            mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}.dmg"
           done
+
+      - name: Rename files (Windows)
+        if: matrix.os == 'windows-latest'
+        shell: bash
+        run: |
+          cd src-tauri/target/${{ matrix.target }}/release/bundle/msi
+          for file in *.msi; do
+            [ -e "$file" ] || continue
+            mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}.msi"
+          done
+          if [ -d "../nsis" ]; then
+            cd ../nsis
+            for file in *.exe; do
+              [ -e "$file" ] || continue
+              mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}-setup.exe"
+            done
+          fi
+
+      - name: Rename files (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        shell: bash
+        run: |
+          cd src-tauri/target/${{ matrix.target }}/release/bundle
+          if [ -d "deb" ]; then
+            cd deb
+            for file in *.deb; do
+              [ -e "$file" ] || continue
+              mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}.deb"
+            done
+            cd ..
+          fi
+          if [ -d "appimage" ]; then
+            cd appimage
+            for file in *.AppImage; do
+              [ -e "$file" ] || continue
+              mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}.AppImage"
+            done
+          fi
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: IPTV-Player-${{ matrix.arch }}
-          path: src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg
+          name: IPTV-Player-${{ matrix.platform }}-${{ matrix.arch }}
+          path: |
+            src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg
+            src-tauri/target/${{ matrix.target }}/release/bundle/msi/*.msi
+            src-tauri/target/${{ matrix.target }}/release/bundle/nsis/*.exe
+            src-tauri/target/${{ matrix.target }}/release/bundle/deb/*.deb
+            src-tauri/target/${{ matrix.target }}/release/bundle/appimage/*.AppImage
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg
+          files: |
+            src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg
+            src-tauri/target/${{ matrix.target }}/release/bundle/msi/*.msi
+            src-tauri/target/${{ matrix.target }}/release/bundle/nsis/*.exe
+            src-tauri/target/${{ matrix.target }}/release/bundle/deb/*.deb
+            src-tauri/target/${{ matrix.target }}/release/bundle/appimage/*.AppImage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
