--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -35,6 +35,7 @@ jobs:
             arch: x64
 
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 45
 
     steps:
       - name: Checkout code
@@ -58,14 +59,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
 
+      - name: Rust cache
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: src-tauri
+
       - name: Install frontend dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build Tauri app
         run: npm run tauri build -- --target ${{ matrix.target }}
@@ -74,26 +81,36 @@ jobs:
         if: matrix.os == 'macos-latest'
         shell: bash
         run: |
-          cd src-tauri/target/${{ matrix.target }}/release/bundle/dmg
+          cd src-tauri/target/${{ matrix.target }}/release/bundle/dmg || exit 1
+          ls -la
           for file in *.dmg; do
-            [ -e "$file" ] || continue
-            mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}.dmg"
+            if [ -f "$file" ]; then
+              echo "Renaming: $file"
+              mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}.dmg" || true
+            fi
           done
+          ls -la
 
       - name: Rename files (Windows)
         if: matrix.os == 'windows-latest'
         shell: bash
         run: |
-          cd src-tauri/target/${{ matrix.target }}/release/bundle/msi
+          cd src-tauri/target/${{ matrix.target }}/release/bundle/msi || exit 1
+          ls -la
           for file in *.msi; do
-            [ -e "$file" ] || continue
-            mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}.msi"
+            if [ -f "$file" ]; then
+              echo "Renaming: $file"
+              mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}.msi" || true
+            fi
           done
           if [ -d "../nsis" ]; then
             cd ../nsis
+            ls -la
             for file in *.exe; do
-              [ -e "$file" ] || continue
-              mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}-setup.exe"
+              if [ -f "$file" ]; then
+                echo "Renaming: $file"
+                mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}-setup.exe" || true
+              fi
             done
           fi
 
@@ -101,20 +118,27 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         shell: bash
         run: |
-          cd src-tauri/target/${{ matrix.target }}/release/bundle
+          cd src-tauri/target/${{ matrix.target }}/release/bundle || exit 1
+          ls -la
           if [ -d "deb" ]; then
             cd deb
+            ls -la
             for file in *.deb; do
-              [ -e "$file" ] || continue
-              mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}.deb"
+              if [ -f "$file" ]; then
+                echo "Renaming: $file"
+                mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}.deb" || true
+              fi
             done
             cd ..
           fi
           if [ -d "appimage" ]; then
             cd appimage
+            ls -la
             for file in *.AppImage; do
-              [ -e "$file" ] || continue
-              mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}.AppImage"
+              if [ -f "$file" ]; then
+                echo "Renaming: $file"
+                mv "$file" "IPTV-Player-${GITHUB_REF_NAME}-${{ matrix.platform }}-${{ matrix.arch }}.AppImage" || true
+              fi
             done
           fi
 
